fix toolbar horizontal scroll

--- a/var/starter_kits/italiagov/src/scss/_fix.scss
+++ b/var/starter_kits/italiagov/src/scss/_fix.scss
@@ -6,6 +6,9 @@
 #toolbar-administration.toolbar::before {
   height: 0;
 }
+.toolbar {
+  position: static;
+}
 
 // Fix autocomplete circle icon
 .form-control {
